--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   get_it: ^7.2.0
+  cached_network_image: ^3.3.0
+  flutter_screenutil: ^5.9.0
+  json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
+  build_runner: ^2.4.6
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
