--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   json_annotation: ^4.8.1
   build_runner: ^2.4.6
   flutter_bloc: ^8.1.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
