--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,15 +39,17 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   get_it: ^7.2.0
-  cached_network_image: ^3.3.0
+  cached_network_image: ^3.2.3
   flutter_screenutil: ^5.9.0
-  json_serializable: ^6.7.1
   json_annotation: ^4.8.1
   build_runner: ^2.4.6
   flutter_bloc: ^8.1.3
   shimmer: ^3.0.0
+  flutter_cache_manager: ^3.3.1
+  flutter_inappwebview: ^5.8.0
 
 dev_dependencies:
+  build_runner: ^2.3.0
   flutter_test:
     sdk: flutter
 
@@ -57,6 +59,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
